# pinecone

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pinescript-bundler-spec.md  pyproject.toml  sitemap.xml
cli/: index.html
configuration/: index.html
docs/: cli.md  configuration.md  getting-started.md  how-it-works.md  index.md
docs/overrides/: main.html
getting-started/: index.html
how-it-works/: index.html
search/: search_index.json
spike/: SPIKE_FINDINGS.md  explore_ast.py  pine.config.json  spike.py
spike/src/: main.pine  main_complex.pine
spike/src/indicators/: custom_rsi.pine
spike/src/utils/: format.pine
src/pinecone/: __init__.py  bundler.py  cli.py  config.py  directives.py  errors.py  renamer.py  resolver.py  watcher.py
tests/: __init__.py  test_bundler.py  test_config.py  test_directives.py  test_renamer.py
tests/fixtures/circular/: pine.config.json
tests/fixtures/circular/src/: a.pine  b.pine  main.pine
tests/fixtures/nested/src/: main.pine
tests/fixtures/nested/src/utils/: format.pine  math.pine
tests/fixtures/simple/src/: main.pine
