[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinecone-bundler"
version = "0.1.0"
description = "A bundler for multi-file PineScript development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pinecone Contributors" }
]
keywords = ["pinescript", "tradingview", "bundler", "pine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pynescript>=0.3.0",
    "click>=8.0.0",
    "watchdog>=3.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pinecone = "pinecone.cli:cli"

[project.urls]
Homepage = "https://github.com/pinecone-bundler/pinecone"
Documentation = "https://github.com/pinecone-bundler/pinecone#readme"
Repository = "https://github.com/pinecone-bundler/pinecone"

[tool.hatch.build.targets.wheel]
packages = ["src/pinecone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
